[tool.poetry]
name = "billbeeapi"
version = "1.1.0"
description = "API client for BillBee, fork of 'billbee-1'"
authors = ["MrP01 <peter@waldert.at>", "felixpi <pilgram@eet.energy>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "billbeeapi" }]
homepage = "https://www.billbee.io"
repository = "https://github.com/eet-energy/billbee-api"

[tool.poetry.dependencies]
python = "^3.9"
requests = ">=2.9.1,<3.0"
jsonpickle = ">=0.7.1,<1.0"
cachecontrol = ">=0.11.7,<1.0"
python-dateutil = ">=2.5.3,<3.0"
enum34 = ">=1.1.6"

[tool.poetry.group.dev.dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
