[tool.poetry]
name = "billbeeapi"
version = "1.1.1"
description = "API client for BillBee, fork of 'billbee-1'"
authors = ["MrP01 <peter@waldert.at>", "felixpi <pilgram@eet.energy>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "billbeeapi" }]
homepage = "https://www.billbee.io"
repository = "https://github.com/eet-energy/billbee-api"

[tool.poetry.dependencies]
python = "^3.9"
requests = ">=2.9.1,<3.0"
jsonpickle = ">=0.7.1,<1.0"
cachecontrol = ">=0.11.7,<1.0"
python-dateutil = ">=2.5.3,<3.0"
enum34 = ">=1.1.6"

[tool.poetry.group.dev.dependencies]
black = "^22.3.0"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
profile = "black"

[tool.pylint]

[tool.pylint.MASTER]
jobs = 1
extension-pkg-whitelist = "pydantic"

[tool.pylint.REPORTS]
output-format = "colorized"

[tool.pylint.FORMAT]
max-line-length = 120
max-module-lines = 1000
indent-after-paren = 4

[tool.flakeheaven]
ignore = "D107,D202,D203,D401,E203,E402,E501,W503"
max_line_length = 120
inline-quotes = "double"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
